--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorHighlight">#BEA2CD</color>
     <color name="colorGray">#999999</color>
+    <color name="colorGreen">#97D077</color>
 </resources>
