--- a/app/src/main/res/layout/activity_car.xml
+++ b/app/src/main/res/layout/activity_car.xml
@@ -16,6 +16,27 @@
         android:textSize="@dimen/title_text_size"
         android:textStyle="bold" />
 
+    <LinearLayout
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="10dip"
+            android:text="@string/car_spinner_label" />
+
+        <Spinner
+            android:id="@+id/car_number_spinner"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:prompt="@string/car_spinner_prompt" />
+
+    </LinearLayout>
+
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
@@ -28,40 +49,6 @@
             android:layout_marginTop="20dp"
             android:orientation="vertical">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/spinner"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/car_spinner_label"
-                    android:textSize="14sp" />
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/bg_spinner">
-
-                    <Spinner
-                        android:id="@+id/sign_up_country"
-                        style="@style/Widget.AppCompat.DropDownItem.Spinner"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp" />
-                </RelativeLayout>
-            </RelativeLayout>
-
-            <Button
-                android:id="@+id/diag_button"
-                style="?android:textAppearanceSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:layout_gravity="right"
-                android:background="@drawable/round_corner_btn"
-                android:text="@string/action_diag"
-                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
