--- a/app/src/main/res/layout/activity_health_status_reg.xml
+++ b/app/src/main/res/layout/activity_health_status_reg.xml
@@ -2,15 +2,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/health_status_reg_title"
-        />
+        android:text="@string/health_status_reg_title" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -20,36 +18,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingVertical="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    >
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="3"
-                        android:text="ああああああああああああああああいいいいいいいいあああああああああああ"
-                        android:textSize="16sp" />
-                    <Button
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:textSize="16sp"
-                        android:background="#dd0000"
-                        android:textColor="#ffffff"
-                        android:text="@string/action_ng"
-                        />
-                </LinearLayout>
-
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
@@ -59,25 +35,22 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    >
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
                         android:text="@string/check_fatigue_title"
-                        android:textSize="16sp"
-                        />
+                        android:textSize="16sp" />
 
                     <Button
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:background="#dddddd"
-                        android:textSize="16sp"
                         android:text="@string/action_ok"
-                        />
+                        android:textSize="16sp" />
                 </LinearLayout>
 
                 <View
@@ -86,34 +59,26 @@
                     android:layout_margin="5dp"
                     android:background="@android:color/black" />
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingVertical="5dp">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_marginLeft="12dp"
-                        android:layout_marginStart="12dp"
-                        android:paddingLeft="10dp"
+                        android:layout_weight="3"
                         android:text="@string/check_feeling_title"
-                        android:textSize="12sp"
-                        android:textStyle="bold" />
+                        android:textSize="16sp" />
 
                     <Button
-                        style="?android:textAppearanceSmall"
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/round_corner_btn"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="#dddddd"
                         android:text="@string/action_ok"
-                        android:textStyle="bold" />
-                </RelativeLayout>
+                        android:textSize="16sp" />
+                </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
@@ -121,31 +86,27 @@
                     android:layout_margin="10dp"
                     android:background="@android:color/black" />
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingVertical="5dp">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_centerInParent="true"
-                        android:paddingLeft="10dp"
+                        android:layout_weight="3"
                         android:text="@string/check_intestine_title"
-                        android:textSize="12sp"
-                        android:textStyle="bold" />
+                        android:textSize="16sp" />
 
                     <Button
-                        style="?android:textAppearanceSmall"
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/round_corner_btn"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="#dd0000"
                         android:text="@string/action_ng"
-                        android:textStyle="bold" />
-                </RelativeLayout>
+                        android:textColor="#ffffff"
+                        android:textSize="16sp" />
+                </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
@@ -153,31 +114,26 @@
                     android:layout_margin="10dp"
                     android:background="@android:color/black" />
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingVertical="5dp">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_centerInParent="true"
-                        android:paddingLeft="10dp"
+                        android:layout_weight="3"
                         android:text="@string/check_drawsiness_title"
-                        android:textSize="12sp"
-                        android:textStyle="bold" />
+                        android:textSize="16sp" />
 
                     <Button
-                        style="?android:textAppearanceSmall"
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/round_corner_btn"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="#dddddd"
                         android:text="@string/action_ok"
-                        android:textStyle="bold" />
-                </RelativeLayout>
+                        android:textSize="16sp" />
+                </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
@@ -185,31 +141,27 @@
                     android:layout_margin="10dp"
                     android:background="@android:color/black" />
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingVertical="5dp">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_centerInParent="true"
-                        android:paddingLeft="10dp"
+                        android:layout_weight="3"
                         android:text="@string/check_pain_title"
-                        android:textSize="12sp"
-                        android:textStyle="bold" />
+                        android:textSize="16sp" />
 
                     <Button
-                        style="?android:textAppearanceSmall"
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/round_corner_btn"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="#dd0000"
                         android:text="@string/action_ng"
-                        android:textStyle="bold" />
-                </RelativeLayout>
+                        android:textColor="#ffffff"
+                        android:textSize="16sp" />
+                </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
@@ -217,36 +169,38 @@
                     android:layout_margin="10dp"
                     android:background="@android:color/black" />
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingVertical="5dp">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_centerInParent="true"
-                        android:paddingLeft="10dp"
+                        android:layout_weight="3"
                         android:text="@string/check_take_medicine_title"
-                        android:textSize="12sp"
-                        android:textStyle="bold" />
+                        android:textSize="16sp" />
 
                     <Button
-                        style="?android:textAppearanceSmall"
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/round_corner_btn"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="#dddddd"
                         android:text="@string/action_ok"
-                        android:textStyle="bold" />
-                </RelativeLayout>
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_margin="5dp"
+                    android:background="@android:color/black" />
 
             </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
