--- a/app/src/main/res/layout/activity_visual_check.xml
+++ b/app/src/main/res/layout/activity_visual_check.xml
@@ -24,24 +24,26 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="5dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingVertical="5dp">
 
             <LinearLayout
-                android:id="@+id/item_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/bg_border_line"
-                android:layerType="software"
                 android:orientation="vertical">
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_margin="5dp"
+                    android:background="@android:color/black" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="85dp">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
                     <LinearLayout
-                        android:id="@+id/brake_label"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_alignParentLeft="true"
@@ -65,24 +67,24 @@
                     </LinearLayout>
 
                     <Button
-                        style="?android:textAppearanceSmall"
                         android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_gravity="center"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:background="#dddddd"
                         android:text="@string/action_ok"
-                        android:textStyle="bold" />
+                        android:textSize="16sp" />
                 </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_margin="10dp"
+                    android:layout_margin="5dp"
                     android:background="@android:color/black" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="85dp">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -108,24 +110,24 @@
                     </LinearLayout>
 
                     <Button
-                        style="?android:textAppearanceSmall"
                         android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_gravity="center"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:background="#dddddd"
                         android:text="@string/action_ok"
-                        android:textStyle="bold" />
+                        android:textSize="16sp" />
                 </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_margin="10dp"
+                    android:layout_margin="5dp"
                     android:background="@android:color/black" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="85dp">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -151,24 +153,24 @@
                     </LinearLayout>
 
                     <Button
-                        style="?android:textAppearanceSmall"
                         android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_gravity="center"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:background="#dddddd"
                         android:text="@string/action_ok"
-                        android:textStyle="bold" />
+                        android:textSize="16sp" />
                 </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_margin="10dp"
+                    android:layout_margin="5dp"
                     android:background="@android:color/black" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="85dp">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -194,24 +196,24 @@
                     </LinearLayout>
 
                     <Button
-                        style="?android:textAppearanceSmall"
                         android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_gravity="center"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:background="#dddddd"
                         android:text="@string/action_ok"
-                        android:textStyle="bold" />
+                        android:textSize="16sp" />
                 </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_margin="10dp"
+                    android:layout_margin="5dp"
                     android:background="@android:color/black" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="85dp">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -237,24 +239,24 @@
                     </LinearLayout>
 
                     <Button
-                        style="?android:textAppearanceSmall"
                         android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_gravity="center"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:background="#dddddd"
                         android:text="@string/action_ok"
-                        android:textStyle="bold" />
+                        android:textSize="16sp" />
                 </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_margin="10dp"
+                    android:layout_margin="5dp"
                     android:background="@android:color/black" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="85dp">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -280,14 +282,20 @@
                     </LinearLayout>
 
                     <Button
-                        style="?android:textAppearanceSmall"
                         android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_gravity="center"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:background="#dd0000"
                         android:text="@string/action_ng"
-                        android:textStyle="bold" />
+                        android:textColor="#ffffff"
+                        android:textSize="16sp" />
                 </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_margin="5dp"
+                    android:background="@android:color/black" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
