--- a/app/src/main/res/layout/activity_call_confirm.xml
+++ b/app/src/main/res/layout/activity_call_confirm.xml
@@ -26,8 +26,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:paddingVertical="5dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingVertical="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -54,7 +54,7 @@
 
                     <Button
                         style="?android:textAppearanceSmall"
-                        android:layout_width="wrap_content"
+                        android:layout_width="70dp"
                         android:layout_height="30dp"
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="10dp"
@@ -86,7 +86,7 @@
 
                     <Button
                         style="?android:textAppearanceSmall"
-                        android:layout_width="wrap_content"
+                        android:layout_width="70dp"
                         android:layout_height="30dp"
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="10dp"
@@ -94,6 +94,7 @@
                         android:text="@string/action_no_exception"
                         android:textStyle="bold" />
                 </RelativeLayout>
+
                 <View
                     android:id="@+id/vital_sign_separator"
                     android:layout_width="match_parent"
@@ -118,7 +119,7 @@
 
                     <Button
                         style="?android:textAppearanceSmall"
-                        android:layout_width="wrap_content"
+                        android:layout_width="70dp"
                         android:layout_height="30dp"
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="10dp"
