--- a/app/src/main/res/layout/activity_day_check_confirm.xml
+++ b/app/src/main/res/layout/activity_day_check_confirm.xml
@@ -1,5 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
@@ -72,6 +71,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="5dp"
                 android:background="@drawable/bg_border_line"
                 android:layerType="software"
@@ -95,7 +95,7 @@
                     <Button
                         android:id="@+id/dby_visual_check_button"
                         style="?android:textAppearanceSmall"
-                        android:layout_width="wrap_content"
+                        android:layout_width="70dp"
                         android:layout_height="30dp"
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="10dp"
@@ -127,7 +127,7 @@
                     <Button
                         android:id="@+id/dby_system_check_button"
                         style="?android:textAppearanceSmall"
-                        android:layout_width="wrap_content"
+                        android:layout_width="70dp"
                         android:layout_height="30dp"
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="10dp"
@@ -171,7 +171,7 @@
                     <Button
                         android:id="@+id/egn_visual_check_button"
                         style="?android:textAppearanceSmall"
-                        android:layout_width="wrap_content"
+                        android:layout_width="70dp"
                         android:layout_height="30dp"
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="10dp"
@@ -203,7 +203,7 @@
                     <Button
                         android:id="@+id/egn_system_check_button"
                         style="?android:textAppearanceSmall"
-                        android:layout_width="wrap_content"
+                        android:layout_width="70dp"
                         android:layout_height="30dp"
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="10dp"
