--- a/app/src/main/res/layout/activity_day_check_show.xml
+++ b/app/src/main/res/layout/activity_day_check_show.xml
@@ -54,7 +54,7 @@
                     <Button
                         android:id="@+id/egn_visual_check_button"
                         style="?android:textAppearanceSmall"
-                        android:layout_width="wrap_content"
+                        android:layout_width="70dp"
                         android:layout_height="30dp"
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="10dp"
@@ -86,7 +86,7 @@
                     <Button
                         android:id="@+id/egn_system_check_button"
                         style="?android:textAppearanceSmall"
-                        android:layout_width="wrap_content"
+                        android:layout_width="70dp"
                         android:layout_height="30dp"
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="10dp"
